# siar

./: .gitignore  CLAUDE.md  README.md  build-dist.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/siar/: __init__.py  auth.py  paths.py
src/siar/cli/: __init__.py  commands.py  main.py
src/siar/data/: __init__.py  audio.py  dataset.py
src/siar/detect/: __init__.py  boxes.py  normalise.py  threshold.py
src/siar/features/: __init__.py  frontend.py  patches.py  spec.py
src/siar/infer/: __init__.py  run.py
src/siar/models/: __init__.py  base.py  conv_ae.py  registry.py
src/siar/store/: __init__.py  db.py  export.py  export_ident.py  schema.py
src/siar/train/: __init__.py  fit.py  model.py
src/siar/viz/: __init__.py  colormap.py  png.py  spectrogram.py
src/siar/web/: __init__.py  server.py
src/siar/web/static/: app.js  index.html  styles.css
tests/: test_detect.py  test_e2e.py  test_features.py  test_pipeline.py
tutorials/: 01-first-detector.md  01_first_detector.py  02-train-run-dashboard.md  02_train_run_dashboard.py  03-view-results-in-the-browser.md  04-build-for-deployment.md  README.md
tutorials/quick_start/: README.md  make_corpus.py
