[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "siar"
version = "0.1.0"
description = "Signal Intelligence and Reconnaissance — unsupervised acoustic anomaly detection"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Vixen Intelligence" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "soundfile>=0.12",
    "torch>=2.1",
    "optuna>=4.0",
]

[project.optional-dependencies]
# Log-mel feature mode (the alternative to SIAR's own pooled-linear grid).
mel = ["librosa>=0.10"]
# Diagnostic figures. Spectrogram PNGs do NOT need this — siar.viz writes them itself.
viz = ["matplotlib>=3.6"]
dev = ["pytest>=8.0"]

[project.scripts]
siar = "siar.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
siar = ["web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
